--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
                     <p>Ready to take control of your weight loss journey? Don't wait any longer! Click the button below
                         to
                         order your supply of Alpilean and start seeing real results.</p>
-                    <a href="https://" class="button">Order Now</a>
+                    <a href="https://629d5y6wp-d5jfb3oamjg4zr52.hop.clickbank.net/" class="button">Order Now</a>
                 </div>
                 <div class="intro-image">
                     <img src="product1.png" alt="Product Image">
@@ -493,7 +493,7 @@
                     <li>Support and Guidance</li>
                 </ul>
             </div>
-            <a href="#" class="button">Try it now!</a>
+            <a href="https://629d5y6wp-d5jfb3oamjg4zr52.hop.clickbank.net/" class="button">Try it now!</a>
         </div>
     </div>
 
@@ -526,12 +526,12 @@
             <p>Are you ready to break free from the struggles of weight loss and embrace a healthier, more confident
                 you? Alpilean is here to support you on your journey. Don't hesitate - seize the opportunity to
                 experience the life-changing benefits of Alpilean. Order now and start your transformation today!</p>
-            <a href="#" class="journey-button">Start Your Journey to Transformation</a> <!-- Added button -->
+            <a href="https://629d5y6wp-d5jfb3oamjg4zr52.hop.clickbank.net/" class="journey-button">Start Your Journey to Transformation</a> <!-- Added button -->
         </div>
     </div>
     <div class="contact-section">
         <h2>Contact Us</h2>
-        <form>
+        <form onsubmit="">
             <label for="fullname">Full Name:</label>
             <input type="text" id="fullname" name="fullname" required placeholder="Enter your full name">
 
