--- a/index.html
+++ b/index.html
@@ -2,409 +2,8 @@
 <html>
 
 <head>
-    <style>
-        * {
-            box-sizing: border-box;
-            padding: 0;
-            margin: 0;
-        }
-
-        body,
-        html {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            font-family: Arial, sans-serif;
-        }
-
-        /*** Start Intro ***/
-
-        .background {
-            background-image: url('background1.png');
-            height: fit-content;
-            padding-bottom: 2rem;
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: cover;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            color: white;
-            text-align: center;
-            font-size: 2em;
-        }
-
-        .intro-container {
-            display: flex;
-            padding: 3rem 6rem 2rem 6rem;
-            gap: 6rem;
-            color: #1F486D;
-        }
-
-        .intro-paragraph {
-            display: flex;
-            flex-direction: column;
-            gap: 1rem;
-            max-width: 80%;
-            margin: 0 auto;
-        }
-
-
-        /* 1F486D */
-        .intro-text {
-            display: flex;
-            flex: 1;
-            flex-direction: column;
-            justify-content: center;
-            align-items: start;
-            font-size: large;
-            text-align: left;
-            gap: 15px;
-        }
-
-        .intro-text h2 {
-            font-size: 1.7em;
-            font-weight: 600;
-        }
-
-        .intro-image {
-            display: flex;
-            flex: 1;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .intro-image img {
-            width: 100%;
-            height: auto;
-        }
-
-        .intro-section {
-            display: flex;
-            flex-direction: column;
-            gap: 1rem;
-        }
-
-        .intro-title {
-            font-size: 20px;
-        }
-
-        .intro-list {
-            font-size: 14px;
-            max-width: 50%;
-            margin: 0 auto;
-            width: fit-content;
-        }
-
-        @media (max-width: 767px) or (orientation: portrait) {
-            .intro-container {
-                flex-direction: column-reverse;
-                align-items: center;
-                gap: 0;
-            }
-
-            .intro-list {
-                max-width: 80%;
-            }
-
-            .intro-image {
-                max-width: 80%;
-            }
-
-            .intro-text {
-                display: flex;
-                flex: 1;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
-                /* Change align-items to center */
-                font-size: center;
-                text-align: center;
-                /* Change text-align to center */
-                gap: 15px;
-                font-size: medium;
-            }
-        }
-
-        .button {
-            background-color: #136E73;
-            border: none;
-            color: white;
-            padding: 10px 25px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            margin: 4px 2px;
-            cursor: pointer;
-        }
-
-        /*** Start Cards ***/
-
-
-
-        .card {
-            flex-basis: calc(33.33% - 20px);
-            margin: 10px;
-            padding: 20px;
-            background-color: #ffffff;
-            /* changed background color to white */
-            border: 1px solid black;
-            /* added black border */
-            border-radius: 25px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            text-align: center;
-            /* added text alignment */
-        }
-
-        .person-name {
-            font-weight: bold;
-        }
-
-        /*** Start Brand ***/
-
-
-        .brand-section {
-            display: flex;
-            justify-content: space-around;
-            padding: 50px 0;
-            align-items: center;
-            background: #f9f9f9;
-        }
-
-
-
-
-        .brand-logo {
-            width: 40vw;
-            height: auto;
-        }
-
-        /*** Start Steps ***/
-
-        .next-steps {
-            text-align: center;
-        }
-
-        .title {
-            font-size: 1.5em;
-            /* adjust the size as needed */
-            margin: 20px auto;
-            /* adjust the spacing as needed */
-            color: #1F486D;
-        }
-
-        .steps-container {
-            display: flex;
-            justify-content: center;
-            margin: 2rem auto;
-            max-width: 80%;
-            /* adjust the width as needed */
-            color: #136E73;
-            gap: 2.5rem;
-        }
-
-        .step {
-            flex-basis: 30%;
-            /* adjust the width as needed */
-            box-sizing: border-box;
-        }
-
-        .step-title {
-            font-size: 1.5em;
-            /* adjust the size as needed */
-            margin-bottom: 10px;
-            /* adjust the spacing as needed */
-        }
-
-        .step-description {
-            font-size: 1em;
-            /* adjust the size as needed */
-        }
-
-        @media (max-width: 767px) or (orientation: portrait) {
-
-            .step-title {
-                font-size: 2em;
-                /* adjust the size as needed */
-            }
-
-            .steps-container {
-                flex-direction: column;
-            }
-        }
-
-        /*** Start Product ***/
-
-        .product-info {
-            text-align: center;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        .features {
-            display: flex;
-            justify-content: center;
-            padding: 20px 0;
-        }
-
-        .features ul {
-            margin: 0 20px;
-        }
-
-        .button {
-            display: inline-block;
-            margin-top: 20px;
-            width: fit-content;
-        }
-
-        @media (min-width: 768px) or (orientation: portrait) {
-            .product-info {
-                text-align: left;
-            }
-
-            .features {
-                justify-content: start;
-            }
-        }
-
-        .product-section-title {
-            text-align: center;
-            font-size: clamp(1.5rem, 5vw, 1.8rem);
-            padding: .5rem 0;
-        }
-
-        .product-section {
-            display: flex;
-            text-align: center;
-        }
-
-        @media (max-width: 768px) or (orientation: portrait) {
-            .product-section {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                padding: 0 3rem;
-            }
-
-            .brand-section {
-                flex-direction: column;
-            }
-
-            .card {
-                max-width: 400px;
-            }
-
-        }
-
-        .product-image-container {
-            color: white;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            position: relative;
-            background-image: url('background2.png');
-            background-size: cover;
-            height: fit-content;
-            padding: 2rem 0;
-        }
-
-        .product-image-container img {
-            width: 40%;
-            aspect-ratio: 1/1;
-            object-fit: cover;
-            margin-bottom: 20px;
-        }
-
-        .product-text {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            padding: 0 20%;
-            text-align: center;
-        }
-
-        .new-image-container img {
-            width: 60%;
-            aspect-ratio: 1/1;
-            object-fit: cover;
-            border-radius: 0;
-            /* Removed rounded border */
-            margin-bottom: 20px;
-        }
-
-        .journey-button {
-            display: inline-block;
-            background-color: #1F486D;
-            color: white;
-            padding: 10px 25px;
-            text-align: center;
-            text-decoration: none;
-            font-size: 16px;
-            margin-top: 20px;
-            /* New margin to place the button below the text */
-            cursor: pointer;
-        }
-
-
-        /*** Start Contact ***/
-
-        .contact-section {
-            background-color: #f2f2f2;
-            padding: 50px;
-            text-align: center;
-        }
-
-        .contact-section h2 {
-            font-size: 2.5rem;
-            margin-bottom: 20px;
-        }
-
-        .contact-section form {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        .contact-section label {
-            font-size: 1.2rem;
-            margin-bottom: 10px;
-            text-align: left;
-            width: 100%;
-        }
-
-        .contact-section input,
-        .contact-section textarea {
-            padding: 10px;
-            margin-bottom: 20px;
-            width: 100%;
-            border: none;
-            border-radius: 5px;
-            box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-            background-color: #C9C9C9;
-        }
-
-        .contact-section textarea {
-            height: 150px;
-        }
-
-        .contact-section button[type="submit"] {
-            background-color: #136E73;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 1.2rem;
-        }
-
-        .contact-section button[type="submit"]:hover {
-            background-color: #3e8e41;
-        }
-    </style>
+    <link href='https://fonts.googleapis.com/css?family=Space Grotesk' rel='stylesheet'>
+    <link href="index.css" rel="stylesheet" >
 </head>
 
 <body>
@@ -526,7 +125,8 @@
             <p>Are you ready to break free from the struggles of weight loss and embrace a healthier, more confident
                 you? Alpilean is here to support you on your journey. Don't hesitate - seize the opportunity to
                 experience the life-changing benefits of Alpilean. Order now and start your transformation today!</p>
-            <a href="https://629d5y6wp-d5jfb3oamjg4zr52.hop.clickbank.net/" class="journey-button">Start Your Journey to Transformation</a> <!-- Added button -->
+            <a href="https://629d5y6wp-d5jfb3oamjg4zr52.hop.clickbank.net/" class="journey-button">Start Your Journey to
+                Transformation</a> <!-- Added button -->
         </div>
     </div>
     <div class="contact-section">
@@ -541,7 +141,7 @@
             <label for="message">What can we help you with?</label>
             <textarea id="message" name="message" required placeholder="Enter your message here"></textarea>
 
-            <button type="submit">Submit</button>
+            <button type="submit" class="button">Submit</button>
         </form>
     </div>
 </body>
